<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">



    <ProgressBar
        android:id="@+id/create_acct_progress"
        android:layout_width="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:orientation="vertical"
        android:id="@+id/acct_login_form"


        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username_account"
            android:hint="@string/username"
            android:layout_marginTop="16dp"
            android:inputType="text"

            android:maxLines="1"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />
        <EditText
            android:id="@+id/password_account"
            android:hint="@string/password_hint0"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"

            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>




    <Button
        android:id="@+id/create_acct_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/create_text"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        app:rippleColor="@color/browser_actions_title_color" />



























</LinearLayout>