<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_text"
        android:textSize="35sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    <androidx.cardview.widget.CardView
        app:cardElevation="6dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"

        android:layout_width="match_parent"
        android:layout_height="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"

            android:text="@string/greatful_text"/>


    </androidx.cardview.widget.CardView>






    </RelativeLayout>

    <Button

        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:text="@string/get_started_text" />


</LinearLayout>