<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_save_journal_button"
    android:layout_width="match_parent"
android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="399dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/soap"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:text="@string/gina"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="205dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="92dp"
        android:layout_height="21dp"
        android:text="@string/today"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="244dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="103dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="393dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/post_description_et"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="394dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/your_thoughts"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="155dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="400dp"
        android:layout_height="47dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/background_light"
        android:text="@string/button"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>